# setlist-beta

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml
.claude/skills/frontend-design/: SKILL.md
.github/workflows/: deploy.yml  sync-develop.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/src/backend/: auth.py  main.py  models.py  pdf.py
backend/src/backend/routers/: auth.py  setlist.py
frontend/: Dockerfile  angular.json  nginx.conf  package-lock.json  package.json
frontend/scripts/: set-api-base.mjs
frontend/src/: index.html  styles.scss  tailwind.css
frontend/src/app/: app.routes.ts  app.spec.ts  app.ts
frontend/src/app/core/: api.config.ts  auth.service.ts  models.ts  pdf-html.ts  pdf.ts  setlist.service.ts
frontend/src/app/features/login/: login.component.html  login.component.ts
frontend/src/app/features/setlist-editor/: duration.util.ts  pdf-preview-dialog.component.ts  pdf.ts  setlist-editor.component.html  setlist-editor.component.scss  setlist-editor.component.ts  setlist-editor.html  setlist-editor.scss  setlist-editor.ts  setlist-toolbar.ts  song-list.html  song-list.scss
frontend/src/app/features/setlist-editor/pdf-preview-dialog/: pdf-preview-dialog.ts
frontend/src/app/features/setlist-editor/setlist-toolbar/: setlist-toolbar.html  (+2 more)
frontend/src/app/layout/: header.component.scss  header.component.ts  header.html  header.spec.ts
frontend/src/app/layout/header/: header.html  header.scss  header.ts
frontend/src/app/shared/: primary-button.directive.ts
frontend/src/environments/: environment.ts
(+2 files in other folders)
